# inova_monitoring

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: cr.yaml
.github/workflows/: ci.yml  helm-release.yml
argocd/: application.yaml
charts/inova-monitoring/: Chart.yaml  values.yaml
charts/inova-monitoring/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  route.yaml  secrets.yaml  service.yaml
configuration/: index.html
db/: analytics_views.sql  catalog.sql  mock_data.sql  sites_mock.sql  users.sql
docs/: architecture.md  configuration.md  index.md  websocket.md
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/configuration/: index.html
site/search/: search_index.json
site/websocket/: index.html
src/inova_monitoring/: __init__.py  config.py  database.py  main.py  messages.py  prometheus.py
src/inova_monitoring/static/: logs.js  reports.js  style.css  users.js
src/inova_monitoring/templates/: base.html  catalog.html  index.html  login.html  logs.html  reports.html  users.html
