[project]
name = "inova-monitoring"
version = "0.1.0"
description = "Monitoring tools for Inova Apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "prometheus-client>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.4.0,<9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
